<resources>
    <string name="app_name">Gustavo</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="tvConsumoHome">Consumo Diário: </string>
    <string name="tvEntradaHome">Entrada Diária: </string>
    <string name="tvUltimaLeituraHome">Última Leitura: </string>

    <string name="btDiaData">Dia</string>
    <string name="btSemanaData">Semana</string>
    <string name="btMesData">Mês</string>
    <string name="btAnoData">Ano</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>