<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntradaFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btDiaDataEntrada"
                android:backgroundTint="#ffa500"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btDiaData" />

            <Button
                android:id="@+id/btSemanaDataEntrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btSemanaData" />

            <Button
                android:id="@+id/btMesDataEntrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btMesData" />

            <Button
                android:id="@+id/btAnoDataEntrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btAnoData" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDiminuirDataEntrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="right"
                android:clickable="true"
                android:text="&lt;" />

            <TextView
                android:id="@+id/tvDataDataEntrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="" />

            <TextView
                android:id="@+id/tvAumentarDataEntrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="left"
                android:clickable="true"
                android:text="&gt;" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivConsumoDataEntrada"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@mipmap/sample"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvConsumoTotalEntrada"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1.0"/>

            <TextView
                android:id="@+id/tvConsumoMedioEntrada"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1.0"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>