<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsumoFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btDiaData"
                android:backgroundTint="#ffa500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:radius="200dp"
                android:text="@string/btDiaData" />

            <Button
                android:id="@+id/btSemanaData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btSemanaData" />

            <Button
                android:id="@+id/btMesData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btMesData" />

            <Button
                android:id="@+id/btAnoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btAnoData" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvDiminuirData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="right"
                android:clickable="true"
                android:text="&lt;" />

            <TextView
                android:id="@+id/tvDataData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:text="" />

            <TextView
                android:id="@+id/tvAumentarData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="left"
                android:clickable="true"
                android:text="&gt;" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivConsumoData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                tools:src="@mipmap/sample" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvConsumoTotal"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1.0"/>

            <TextView
                android:id="@+id/tvConsumoMedio"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1.0"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>