<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    tools:ignore="NamespaceTypo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="148dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volume Atual do Reservatório"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/imageViewCaixa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewCaixa"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="108dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.175" />

            <TextView
                android:id="@+id/tvConsumoAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewCaixa"
                app:layout_constraintVertical_bias="0.267" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/qwe"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/water_out" />

                <LinearLayout
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvConsumoHome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"
                        android:text="@string/tvConsumoHome"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvConsumoDadoHome"
                        android:layout_width="match_parent"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/qweqwe"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/water_in" />

                <LinearLayout
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvEntradaHome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/tvEntradaHome"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvEntradaDadoHome"
                        android:layout_width="match_parent"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/data" />

                <LinearLayout
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUltimaLeituraHome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"
                        android:text="@string/tvUltimaLeituraHome"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUltimaLeituraDadoHome"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:id="@+id/view1"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#B1BCBE"
                    android:focusable="false" />

                <Button
                    android:id="@+id/btViewMoreHome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:textStyle="bold"
                    android:text="Ver mais"
                    android:textColor="@color/black" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>